<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode = "stateUnchanged"
    tools:context="com.becama.queuethemusic.qtm.CreateAQueueHomePage">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/qhp_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:context="com.becama.queuethemusic.qthemusic.QueueHomePage">

        <TextView
            android:id="@+id/qhp_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/test"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/qhp_imageView"
            app:layout_constraintTop_toBottomOf="@+id/qhp_queue_name" />

        <TextView
            android:id="@+id/qhp_artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/test"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/qhp_imageView"
            app:layout_constraintTop_toBottomOf="@+id/qhp_song_name" />

        <SeekBar
            android:id="@+id/qhp_seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qhp_imageView" />

        <Button
            android:id="@+id/qhp_playpause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@layout/button_style_qhp_playpause"
            android:onClick="playPause"
            app:layout_constraintEnd_toStartOf="@+id/qhp_next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/qhp_previous"
            app:layout_constraintTop_toBottomOf="@+id/qhp_seekBar" />

        <Button
            android:id="@+id/qhp_previous"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/qhp_previous"
            android:onClick="previousSong"
            app:layout_constraintEnd_toStartOf="@+id/qhp_playpause"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/qhp_playpause" />

        <Button
            android:id="@+id/qhp_next"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/qhp_next"
            android:onClick="nextSong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/qhp_playpause"
            app:layout_constraintTop_toTopOf="@+id/qhp_playpause" />

        <TextView
            android:id="@+id/qhp_queue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/qhp_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/qhp_songs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="goToHostSongSearch"
            android:text="Songs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/qhp_members_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="Members"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/qhp_imageView"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/qhp_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/qhp_seekBar"
            app:layout_constraintTop_toTopOf="@+id/qhp_seekBar" />

        <ListView
            android:id="@+id/qhp_listview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/list_divider"
            android:dividerHeight="2dp"
            app:layout_constraintBottom_toTopOf="@id/qhp_members_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qhp_playpause">

        </ListView>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/hss_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context="com.becama.queuethemusic.qthemusic.HostSongSearch">

        <EditText
            android:id="@+id/hss_song_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/song_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/hss_search_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/hss_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:onClick="searchSong"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/hss_listview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/list_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hss_song_search" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
